# miniDRL

./: .gitignore  README.md  SingularityFile.def  pyproject.toml  requirements.txt  setup.py
benchmarking/np/: np_gemm.csv  np_gemm.py
benchmarking/ppo/: memory_benchmarking.py  sps_benchmarking.py
benchmarking/r2d2/: actor_epsilon_comparison.py  benchmark_model_sharing.py  benchmark_replay.py  calc_replay_size.py  sps_benchmarking.py
benchmarking/random/: pipe_vs_queue.py
d2rl/: config.py
d2rl/ppo/: network.py  ppo.py  run_atari.py  run_gym.py  run_minigrid.py  utils.py
d2rl/ppo/benchmarking/: sps_benchmarking.py
d2rl/r2d2/: r2d2.py  replay.py  run_atari.py  run_cartpole.py  run_gym.py  utils.py
docs/ppo/: ppo.md
docs/ppo/figures/: benchmarking_results_atari.csv  benchmarking_results_atari_fbs.csv  benchmarking_results_atari_fne.csv  benchmarking_results_atari_swne.csv  gen_plots.py
docs/r2d2/: r2d2.md
minidrl/: config.py
minidrl/common/: atari_wrappers.py
minidrl/ppo/: ppo.py  run_atari.py  run_gym.py  run_minigrid.py  utils.py
minidrl/r2d2/: r2d2.py  replay.py  run_atari.py  run_cartpole.py  run_gym.py  utils.py
porl/common/: atari_wrappers.py
porl/ppo/: benchmarking_results.csv  network.py  ppo.py  run_atari.py  run_gym.py  run_minigrid.py  sps_benchmarking.py  utils.py
porl/r2d2/: network.py  r2d2.py  replay.py  run_atari.py  run_gym.py  utils.py
tests/r2d2/: test_actor.py  test_cartpole.py  test_loss.py  test_main.py  test_network.py  test_queue.py  test_replay.py  test_run.py
tests/random/: test_async_weight_sharing.py  test_proc_fail.py  test_seqs.py  test_shared_mem.py  test_shared_mem_plus_queue.py  test_thread_worker.py  test_vec_env.py
